--- a/cpp-folders/src/hello-plumbing/CMakeLists.txt
+++ b/cpp-folders/src/hello-plumbing/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 
 if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
     set(VK_TRI_SHADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
+    set(VK_DEFAULT_SHADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../shs-renderer-lib/shaders/vulkan")
     set(VK_TRI_OUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")
     file(MAKE_DIRECTORY "${VK_TRI_OUT_DIR}")
 
@@ -55,6 +56,28 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
     set(VK_TRI_FRAG "${VK_TRI_SHADER_DIR}/vulkan_triangle.frag")
     set(VK_TRI_VERT_SPV "${VK_TRI_OUT_DIR}/vulkan_triangle.vert.spv")
     set(VK_TRI_FRAG_SPV "${VK_TRI_OUT_DIR}/vulkan_triangle.frag.spv")
+
+    set(VK_PB_SHADOW_VERT "${VK_DEFAULT_SHADER_DIR}/pb_shadow.vert")
+    set(VK_PB_SCENE_VERT "${VK_DEFAULT_SHADER_DIR}/pb_scene.vert")
+    set(VK_PB_SCENE_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_scene.frag")
+    set(VK_PB_POST_VERT "${VK_DEFAULT_SHADER_DIR}/pb_post.vert")
+    set(VK_PB_SKY_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_sky.frag")
+    set(VK_PB_BRIGHT_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_bright.frag")
+    set(VK_PB_SHAFTS_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_shafts.frag")
+    set(VK_PB_FLARE_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_flare.frag")
+    set(VK_PB_COMPOSITE_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_composite.frag")
+    set(VK_PB_FXAA_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_fxaa.frag")
+
+    set(VK_PB_SHADOW_VERT_SPV "${VK_TRI_OUT_DIR}/pb_shadow.vert.spv")
+    set(VK_PB_SCENE_VERT_SPV "${VK_TRI_OUT_DIR}/pb_scene.vert.spv")
+    set(VK_PB_SCENE_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_scene.frag.spv")
+    set(VK_PB_POST_VERT_SPV "${VK_TRI_OUT_DIR}/pb_post.vert.spv")
+    set(VK_PB_SKY_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_sky.frag.spv")
+    set(VK_PB_BRIGHT_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_bright.frag.spv")
+    set(VK_PB_SHAFTS_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_shafts.frag.spv")
+    set(VK_PB_FLARE_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_flare.frag.spv")
+    set(VK_PB_COMPOSITE_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_composite.frag.spv")
+    set(VK_PB_FXAA_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_fxaa.frag.spv")
 
     add_custom_command(
         OUTPUT "${VK_TRI_VERT_SPV}"
@@ -68,7 +91,80 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
         DEPENDS "${VK_TRI_FRAG}"
         VERBATIM
     )
+    add_custom_command(
+        OUTPUT "${VK_PB_SHADOW_VERT_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_SHADOW_VERT}" -o "${VK_PB_SHADOW_VERT_SPV}"
+        DEPENDS "${VK_PB_SHADOW_VERT}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_SCENE_VERT_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_SCENE_VERT}" -o "${VK_PB_SCENE_VERT_SPV}"
+        DEPENDS "${VK_PB_SCENE_VERT}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_SCENE_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_SCENE_FRAG}" -o "${VK_PB_SCENE_FRAG_SPV}"
+        DEPENDS "${VK_PB_SCENE_FRAG}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_POST_VERT_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_POST_VERT}" -o "${VK_PB_POST_VERT_SPV}"
+        DEPENDS "${VK_PB_POST_VERT}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_SKY_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_SKY_FRAG}" -o "${VK_PB_SKY_FRAG_SPV}"
+        DEPENDS "${VK_PB_SKY_FRAG}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_BRIGHT_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_BRIGHT_FRAG}" -o "${VK_PB_BRIGHT_FRAG_SPV}"
+        DEPENDS "${VK_PB_BRIGHT_FRAG}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_SHAFTS_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_SHAFTS_FRAG}" -o "${VK_PB_SHAFTS_FRAG_SPV}"
+        DEPENDS "${VK_PB_SHAFTS_FRAG}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_FLARE_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_FLARE_FRAG}" -o "${VK_PB_FLARE_FRAG_SPV}"
+        DEPENDS "${VK_PB_FLARE_FRAG}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_COMPOSITE_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_COMPOSITE_FRAG}" -o "${VK_PB_COMPOSITE_FRAG_SPV}"
+        DEPENDS "${VK_PB_COMPOSITE_FRAG}"
+        VERBATIM
+    )
+    add_custom_command(
+        OUTPUT "${VK_PB_FXAA_FRAG_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_PB_FXAA_FRAG}" -o "${VK_PB_FXAA_FRAG_SPV}"
+        DEPENDS "${VK_PB_FXAA_FRAG}"
+        VERBATIM
+    )
     add_custom_target(HelloVulkanTriangleShaders DEPENDS "${VK_TRI_VERT_SPV}" "${VK_TRI_FRAG_SPV}")
+    add_custom_target(HelloPassBasicsVulkanShaders
+        DEPENDS
+            "${VK_PB_SHADOW_VERT_SPV}"
+            "${VK_PB_SCENE_VERT_SPV}"
+            "${VK_PB_SCENE_FRAG_SPV}"
+            "${VK_PB_POST_VERT_SPV}"
+            "${VK_PB_SKY_FRAG_SPV}"
+            "${VK_PB_BRIGHT_FRAG_SPV}"
+            "${VK_PB_SHAFTS_FRAG_SPV}"
+            "${VK_PB_FLARE_FRAG_SPV}"
+            "${VK_PB_COMPOSITE_FRAG_SPV}"
+            "${VK_PB_FXAA_FRAG_SPV}"
+    )
 
     add_executable(HelloVulkanTriangle hello_vulkan_triangle.cpp)
     add_dependencies(HelloVulkanTriangle HelloVulkanTriangleShaders)
@@ -85,6 +181,30 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
         target_compile_options(HelloVulkanTriangle PRIVATE $<$<CONFIG:Debug>:-g>)
     endif()
     target_compile_features(HelloVulkanTriangle PRIVATE cxx_std_20)
+
+    add_executable(HelloPassBasicsVulkan hello_pass_basics_vulkan.cpp)
+    add_dependencies(HelloPassBasicsVulkan HelloPassBasicsVulkanShaders)
+    target_link_libraries(HelloPassBasicsVulkan PRIVATE shs::renderer)
+    target_compile_definitions(HelloPassBasicsVulkan PRIVATE
+        SHS_VK_PB_SHADOW_VERT_SPV="${VK_PB_SHADOW_VERT_SPV}"
+        SHS_VK_PB_SCENE_VERT_SPV="${VK_PB_SCENE_VERT_SPV}"
+        SHS_VK_PB_SCENE_FRAG_SPV="${VK_PB_SCENE_FRAG_SPV}"
+        SHS_VK_PB_POST_VERT_SPV="${VK_PB_POST_VERT_SPV}"
+        SHS_VK_PB_SKY_FRAG_SPV="${VK_PB_SKY_FRAG_SPV}"
+        SHS_VK_PB_BRIGHT_FRAG_SPV="${VK_PB_BRIGHT_FRAG_SPV}"
+        SHS_VK_PB_SHAFTS_FRAG_SPV="${VK_PB_SHAFTS_FRAG_SPV}"
+        SHS_VK_PB_FLARE_FRAG_SPV="${VK_PB_FLARE_FRAG_SPV}"
+        SHS_VK_PB_COMPOSITE_FRAG_SPV="${VK_PB_COMPOSITE_FRAG_SPV}"
+        SHS_VK_PB_FXAA_FRAG_SPV="${VK_PB_FXAA_FRAG_SPV}"
+    )
+    if(MSVC)
+        target_compile_options(HelloPassBasicsVulkan PRIVATE /W4)
+    else()
+        target_compile_options(HelloPassBasicsVulkan PRIVATE -Wall -Wextra -Wpedantic)
+        target_compile_options(HelloPassBasicsVulkan PRIVATE $<$<CONFIG:Release>:-O3>)
+        target_compile_options(HelloPassBasicsVulkan PRIVATE $<$<CONFIG:Debug>:-g>)
+    endif()
+    target_compile_features(HelloPassBasicsVulkan PRIVATE cxx_std_20)
 else()
     if(NOT SHS_RENDERER_HAS_VULKAN)
         message(STATUS "HelloVulkanTriangle skipped (shs::renderer built without Vulkan support)")
@@ -92,5 +212,12 @@ else()
         message(STATUS "HelloVulkanTriangle skipped (glslangValidator not found)")
     elseif(NOT SHS_SDL2_HAS_VULKAN)
         message(STATUS "HelloVulkanTriangle skipped (SDL2 was built without Vulkan support)")
+    endif()
+    if(NOT SHS_RENDERER_HAS_VULKAN)
+        message(STATUS "HelloPassBasicsVulkan skipped (shs::renderer built without Vulkan support)")
+    elseif(NOT GLSLANG_VALIDATOR)
+        message(STATUS "HelloPassBasicsVulkan skipped (glslangValidator not found)")
+    elseif(NOT SHS_SDL2_HAS_VULKAN)
+        message(STATUS "HelloPassBasicsVulkan skipped (SDL2 was built without Vulkan support)")
     endif()
 endif()
