--- a/cpp-folders/src/hello-plumbing/CMakeLists.txt
+++ b/cpp-folders/src/hello-plumbing/CMakeLists.txt
@@ -69,6 +69,7 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
     set(VK_PB_FXAA_FRAG "${VK_DEFAULT_SHADER_DIR}/pb_fxaa.frag")
     set(VK_FP_SCENE_VERT "${VK_DEFAULT_SHADER_DIR}/fp_stress_scene.vert")
     set(VK_FP_SCENE_FRAG "${VK_DEFAULT_SHADER_DIR}/fp_stress_scene.frag")
+    set(VK_FP_SHADOW_VERT "${VK_DEFAULT_SHADER_DIR}/fp_stress_shadow.vert")
     set(VK_FP_LIGHT_CULL_COMP "${VK_DEFAULT_SHADER_DIR}/fp_stress_light_cull.comp")
     set(VK_FP_DEPTH_REDUCE_COMP "${VK_DEFAULT_SHADER_DIR}/fp_stress_depth_reduce.comp")
 
@@ -84,6 +85,7 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
     set(VK_PB_FXAA_FRAG_SPV "${VK_TRI_OUT_DIR}/pb_fxaa.frag.spv")
     set(VK_FP_SCENE_VERT_SPV "${VK_TRI_OUT_DIR}/fp_stress_scene.vert.spv")
     set(VK_FP_SCENE_FRAG_SPV "${VK_TRI_OUT_DIR}/fp_stress_scene.frag.spv")
+    set(VK_FP_SHADOW_VERT_SPV "${VK_TRI_OUT_DIR}/fp_stress_shadow.vert.spv")
     set(VK_FP_LIGHT_CULL_COMP_SPV "${VK_TRI_OUT_DIR}/fp_stress_light_cull.comp.spv")
     set(VK_FP_DEPTH_REDUCE_COMP_SPV "${VK_TRI_OUT_DIR}/fp_stress_depth_reduce.comp.spv")
 
@@ -172,6 +174,12 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
         VERBATIM
     )
     add_custom_command(
+        OUTPUT "${VK_FP_SHADOW_VERT_SPV}"
+        COMMAND ${GLSLANG_VALIDATOR} -V "${VK_FP_SHADOW_VERT}" -o "${VK_FP_SHADOW_VERT_SPV}"
+        DEPENDS "${VK_FP_SHADOW_VERT}"
+        VERBATIM
+    )
+    add_custom_command(
         OUTPUT "${VK_FP_LIGHT_CULL_COMP_SPV}"
         COMMAND ${GLSLANG_VALIDATOR} -V "${VK_FP_LIGHT_CULL_COMP}" -o "${VK_FP_LIGHT_CULL_COMP_SPV}"
         DEPENDS "${VK_FP_LIGHT_CULL_COMP}"
@@ -201,6 +209,7 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
         DEPENDS
             "${VK_FP_SCENE_VERT_SPV}"
             "${VK_FP_SCENE_FRAG_SPV}"
+            "${VK_FP_SHADOW_VERT_SPV}"
             "${VK_FP_LIGHT_CULL_COMP_SPV}"
             "${VK_FP_DEPTH_REDUCE_COMP_SPV}"
     )
@@ -251,6 +260,7 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
     target_compile_definitions(HelloForwardPlusStressVulkan PRIVATE
         SHS_VK_FP_SCENE_VERT_SPV="${VK_FP_SCENE_VERT_SPV}"
         SHS_VK_FP_SCENE_FRAG_SPV="${VK_FP_SCENE_FRAG_SPV}"
+        SHS_VK_FP_SHADOW_VERT_SPV="${VK_FP_SHADOW_VERT_SPV}"
         SHS_VK_FP_LIGHT_CULL_COMP_SPV="${VK_FP_LIGHT_CULL_COMP_SPV}"
         SHS_VK_FP_DEPTH_REDUCE_COMP_SPV="${VK_FP_DEPTH_REDUCE_COMP_SPV}"
     )
@@ -262,6 +272,26 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
         target_compile_options(HelloForwardPlusStressVulkan PRIVATE $<$<CONFIG:Debug>:-g>)
     endif()
     target_compile_features(HelloForwardPlusStressVulkan PRIVATE cxx_std_20)
+
+    add_executable(HelloVulkanShadowTechniques hello_forward_plus_stress_vulkan.cpp)
+    add_dependencies(HelloVulkanShadowTechniques HelloForwardPlusStressVulkanShaders)
+    target_link_libraries(HelloVulkanShadowTechniques PRIVATE shs::renderer)
+    target_compile_definitions(HelloVulkanShadowTechniques PRIVATE
+        SHS_VK_FP_SCENE_VERT_SPV="${VK_FP_SCENE_VERT_SPV}"
+        SHS_VK_FP_SCENE_FRAG_SPV="${VK_FP_SCENE_FRAG_SPV}"
+        SHS_VK_FP_SHADOW_VERT_SPV="${VK_FP_SHADOW_VERT_SPV}"
+        SHS_VK_FP_LIGHT_CULL_COMP_SPV="${VK_FP_LIGHT_CULL_COMP_SPV}"
+        SHS_VK_FP_DEPTH_REDUCE_COMP_SPV="${VK_FP_DEPTH_REDUCE_COMP_SPV}"
+        SHS_FP_SHADOW_SHOWCASE=1
+    )
+    if(MSVC)
+        target_compile_options(HelloVulkanShadowTechniques PRIVATE /W4)
+    else()
+        target_compile_options(HelloVulkanShadowTechniques PRIVATE -Wall -Wextra -Wpedantic)
+        target_compile_options(HelloVulkanShadowTechniques PRIVATE $<$<CONFIG:Release>:-O3>)
+        target_compile_options(HelloVulkanShadowTechniques PRIVATE $<$<CONFIG:Debug>:-g>)
+    endif()
+    target_compile_features(HelloVulkanShadowTechniques PRIVATE cxx_std_20)
 else()
     if(NOT SHS_RENDERER_HAS_VULKAN)
         message(STATUS "HelloVulkanTriangle skipped (shs::renderer built without Vulkan support)")
@@ -283,5 +313,12 @@ else()
         message(STATUS "HelloForwardPlusStressVulkan skipped (glslangValidator not found)")
     elseif(NOT SHS_SDL2_HAS_VULKAN)
         message(STATUS "HelloForwardPlusStressVulkan skipped (SDL2 was built without Vulkan support)")
+    endif()
+    if(NOT SHS_RENDERER_HAS_VULKAN)
+        message(STATUS "HelloVulkanShadowTechniques skipped (shs::renderer built without Vulkan support)")
+    elseif(NOT GLSLANG_VALIDATOR)
+        message(STATUS "HelloVulkanShadowTechniques skipped (glslangValidator not found)")
+    elseif(NOT SHS_SDL2_HAS_VULKAN)
+        message(STATUS "HelloVulkanShadowTechniques skipped (SDL2 was built without Vulkan support)")
     endif()
 endif()
