--- a/cpp-folders/src/hello-plumbing/CMakeLists.txt
+++ b/cpp-folders/src/hello-plumbing/CMakeLists.txt
@@ -15,6 +15,17 @@ else()
 endif()
 target_compile_features(HelloPassBasics PRIVATE cxx_std_20)
 
+add_executable(HelloPassPlumbing hello_pass_plumbing.cpp)
+target_link_libraries(HelloPassPlumbing PRIVATE shs::renderer)
+if(MSVC)
+    target_compile_options(HelloPassPlumbing PRIVATE /W4)
+else()
+    target_compile_options(HelloPassPlumbing PRIVATE -Wall -Wextra -Wpedantic)
+    target_compile_options(HelloPassPlumbing PRIVATE $<$<CONFIG:Release>:-O3>)
+    target_compile_options(HelloPassPlumbing PRIVATE $<$<CONFIG:Debug>:-g>)
+endif()
+target_compile_features(HelloPassPlumbing PRIVATE cxx_std_20)
+
 add_executable(HelloSoftwareTriangle hello_software_triangle.cpp)
 target_link_libraries(HelloSoftwareTriangle PRIVATE shs::renderer)
 if(MSVC)
