--- a/cpp-folders/src/hello-render-target/CMakeLists.txt
+++ b/cpp-folders/src/hello-render-target/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${stb_SOURCE_DIR}/)
 #include_directories(${entt_SOURCE_DIR}/src/)
 
 include_directories(${SHSRenderer_SOURCE_DIR}/)
+include_directories(${CMAKE_SOURCE_DIR}/src/shs-renderer-lib/include)
 
 set(CMAKE_CXX_STANDARD 20)
 if(NOT CMAKE_BUILD_TYPE)
