--- a/cpp-folders/src/hello-other-exps/CMakeLists.txt
+++ b/cpp-folders/src/hello-other-exps/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(OtherExps)
+project(HelloOtherExps)
 
 find_package(SDL2 CONFIG REQUIRED)
 find_package(SDL2_image CONFIG REQUIRED)
@@ -10,7 +10,7 @@ include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${stb_SOURCE_DIR}/)
 
-include_directories(${SHSRenderer_SOURCE_DIR}/)
+include_directories(${HelloSHSRenderer_SOURCE_DIR}/)
 
 set(CMAKE_CXX_STANDARD 20)
 if(NOT CMAKE_BUILD_TYPE)
