--- a/cpp-folders/src/hello-3d-primitives/CMakeLists.txt
+++ b/cpp-folders/src/hello-3d-primitives/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(${CMAKE_BINARY_DIR})
 include_directories(${stb_SOURCE_DIR}/)
 #include_directories(${entt_SOURCE_DIR}/src/)
 
-include_directories(${SHSRenderer_SOURCE_DIR}/)
+include_directories(${HelloSHSRenderer_SOURCE_DIR}/)
 
 set(CMAKE_CXX_STANDARD 20)
 if(NOT CMAKE_BUILD_TYPE)
