Jolt derived reusable geometry module is in progress.

--- a/cpp-folders/src/shs-renderer-lib/CMakeLists.txt
+++ b/cpp-folders/src/shs-renderer-lib/CMakeLists.txt
@@ -115,6 +115,14 @@ elseif(TARGET xsimd::xsimd)
 endif()
 set(SHS_RENDERER_HAS_XSIMD "${SHS_RENDERER_HAS_XSIMD}" PARENT_SCOPE)
 
+set(SHS_RENDERER_HAS_JOLT OFF)
+if(TARGET Jolt)
+    set(SHS_RENDERER_HAS_JOLT ON)
+    target_link_libraries(shs_renderer PUBLIC Jolt)
+    target_compile_definitions(shs_renderer PUBLIC SHS_HAS_JOLT=1)
+endif()
+set(SHS_RENDERER_HAS_JOLT "${SHS_RENDERER_HAS_JOLT}" PARENT_SCOPE)
+
 set(SHS_RENDERER_HAS_VULKAN OFF)
 if(Vulkan_FOUND AND TARGET Vulkan::Vulkan)
     set(SHS_RENDERER_HAS_VULKAN ON)
