frustum and occlusion culling for scene geometries, based on the Jolt's shapes and volumes.

--- a/cpp-folders/src/exp-plumbing/CMakeLists.txt
+++ b/cpp-folders/src/exp-plumbing/CMakeLists.txt
@@ -375,6 +375,15 @@ if(SHS_RENDERER_HAS_VULKAN AND GLSLANG_VALIDATOR AND SHS_SDL2_HAS_VULKAN)
         SHS_VK_CULLING_VERT_SPV="${VK_CULLING_VERT_SPV}"
         SHS_VK_CULLING_FRAG_SPV="${VK_CULLING_FRAG_SPV}"
     )
+
+    add_executable(hello_occlusion_culling_vk hello_occlusion_culling_vk.cpp)
+    add_dependencies(hello_occlusion_culling_vk HelloCullingVkShaders)
+    target_link_libraries(hello_occlusion_culling_vk PRIVATE shs::renderer)
+    set_target_properties(hello_occlusion_culling_vk PROPERTIES FOLDER "Demos")
+    target_compile_definitions(hello_occlusion_culling_vk PRIVATE
+        SHS_VK_CULLING_VERT_SPV="${VK_CULLING_VERT_SPV}"
+        SHS_VK_CULLING_FRAG_SPV="${VK_CULLING_FRAG_SPV}"
+    )
 endif()
 
 # Software culling demo (always available)
@@ -382,3 +391,8 @@ add_executable(hello_culling_sw hello_culling_sw.cpp)
 target_link_libraries(hello_culling_sw PRIVATE shs::renderer)
 set_target_properties(hello_culling_sw PROPERTIES FOLDER "Demos")
 target_compile_features(hello_culling_sw PRIVATE cxx_std_20)
+
+add_executable(hello_occlusion_culling_sw hello_occlusion_culling_sw.cpp)
+target_link_libraries(hello_occlusion_culling_sw PRIVATE shs::renderer)
+set_target_properties(hello_occlusion_culling_sw PROPERTIES FOLDER "Demos")
+target_compile_features(hello_occlusion_culling_sw PRIVATE cxx_std_20)
